--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "author": "KP",
   "devDependencies": {
     "css-loader": "^6.7.2",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
